--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
   </head>
   <body>
     <header class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <h1>Our amazing tours</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Vel at ratione aliquam deserunt voluptatibus velit molestias enim nam ut tempora officia illo, 
-                    odit est consequuntur soluta porro tempore quae veritatis!</p>
-
-            </div>
-
+    <div class="row">
+        <div class="col-sm-12">
+         <h1>Our amazing tours</h1>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Vel at ratione aliquam deserunt voluptatibus velit molestias enim nam ut tempora officia illo, 
+            odit est consequuntur soluta porro tempore quae veritatis!
+          </p>
 
         </div>
+
+
+    </div>
 
     </header>
     <main>
