--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header class="container">
     <div class="row">
-        <div class="col-sm-12">
+    <div class="col-sm-12 text-center">
          <h1>Our amazing tours</h1>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Vel at ratione aliquam deserunt voluptatibus velit molestias enim nam ut tempora officia illo, 
             odit est consequuntur soluta porro tempore quae veritatis!
           </p>
-
-        </div>
-
-
+         </div>
     </div>
 
     </header>
@@ -27,25 +25,37 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card 1</h5>
-          <p class="card-text">Contenuto della card 1</p>
+        <div class="card-body text-center">
+            <img class="img" src="./img/immag.jpg" alt="">
+                <h5 class="card-title text-center text-bg-warnings bg-success">HIKE THE FOREST</h5>
+          <p class="card-text text-center">Sad a laucus. duis porta molestie designisim maurism raturm a que. Morbi molestie vetsibilum</p>
+          <hr>
+          <p class="text-success">2 days-2 destination</p>
+          <p> <strong>350</strong>/person</p>
         </div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card 2</h5>
-          <p class="card-text">Contenuto della card 2</p>
+        <div class="card-body text-center">
+            <img class="img" src="./img/1061-300x300.jpg" alt="">
+          <h5 class="card-title bg-warning">EXPLORE THE SEA</h5>
+          <p class="card-text">Sad a laucus. duis porta molestie designisim maurism raturm a que. Morbi molestie vetsibilum</p>
+          <hr>
+          <p class="text-warning">2 days-2 destination</p>
+          <p> <strong>370</strong>/person</p>
         </div>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card 3</h5>
-          <p class="card-text">Contenuto della card 3</p>
+        <div class="card-body text-center">
+            <img class="img" src="./img/neve.jpg" alt="">
+          <h5 class="card-title bg-primary">CAMP IN THE SNOW</h5>
+          <p class="card-text text-center">ad a laucus. duis porta molestie designisim maurism raturm a que. Morbi molestie vetsibilum</p>
+          <hr>
+          <p class="text-primary">2days-destinstion</p>
+          <p> <strong>400</strong>/person</p>
         </div>
       </div>
     </div>
